tests/vertical-slice/reject/machine_wasm_blocking_recv.hew
// W4.002 reject fixture: `.recv()` inside a machine transition body must
// be rejected at HIR-lower time when compiling for wasm32, exercising the
// Item::Machine arm of `check_wasm_blocking_recv_gate` added in this change.
//
// The .recv() call is on a real `Receiver<i64>` obtained from
// `channel.new(capacity)` so the type checker accepts the program; the
// wasm32 gate then rejects the blocking `.recv()` at HIR-lower time.
import std::channel::channel;

machine M {
    events {
        Tick;
    }

    state Idle;
    state Done;

    on Tick: Idle => Done {
        let (_tx, rx): (Sender<i64>, Receiver<i64>) = channel.new(8);
        let _ = rx.recv();
        Done
    }

    default { state }
}

fn main() {}
